<resources>

    <string name="app_name">Happiness Trivia</string>
    <string name="main_intro">Happiness is a fascinating topic that has been pondered for centuries and continues to be studied today.</string>
    <string name="main_body">For instance, did you know happiness is about 50% genetic, so a larger part is under our control? Or, since 2012, International Day of Happiness is celebrated on March 20th?</string>
    <string name="main_learn">Learn more happiness trivia!</string>
    <string name="start_quiz">Take the Quiz</string>

    <string name="field_name">What is your name?</string>

    <string name="question_1_of_10">Question 1 of 10</string>
    <string name="question_1_text">Spending _____ a day outside in good weather boosts positive mood, broadens thinking, and improves working memory.</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_40_minutes">40 minutes</string>
    <string name="_50_minutes">50 minutes</string>

    <string name="question_2_of_10">Question 2 of 10</string>
    <string name="question_2_text">People who spend more time on these activities report being less happy. Check two answers that apply.</string>
    <string name="email">Checking email more than 3x/day</string>
    <string name="hobby">Engaging in a hobby with others</string>
    <string name="facebook">Facebook and other social media</string>
    <string name="petting">Petting a dog or cat</string>
    <string name="volunteering">Volunteering</string>

    <string name="question_3_of_10">Question 3 of 10</string>
    <string name="question_3_text">Around the world, what is the biggest suppressant of happiness?</string>
    <string name="climate">Climate</string>
    <string name="consumerism">Consumerism</string>
    <string name="physical_health">Physical Health</string>
    <string name="religion">Religion</string>
    <string name="social_networks">Social Networks</string>

    <string name="question_4_of_10">Question 4 of 10</string>
    <string name="question_4_text">What is the happiest country in the world in 2017?</string>
    <string name="australia">Australia</string>
    <string name="canada">Canada</string>
    <string name="norway">Norway</string>
    <string name="sweden">Sweden</string>
    <string name="united_states">United States</string>

    <string name="question_5_of_10">Question 5 of 10</string>
    <string name="question_5_text"> The happiest U.S. cities are bikeable, walkable, have access to nature, lack billboards, and help needy people. Which one took first place among the top five happiest U.S. cities in 2017?</string>
    <string name="boulder_co">Boulder, CO</string>
    <string name="charlottesville_va">Charlottesville, VA</string>
    <string name="fort_collins_co">Fort Collins, CO</string>
    <string name="san_luis_obispo_ca">San Luis Obispo, CA</string>
    <string name="santa_cruz_watsonville_ca">Santa Cruz-Watsonville, CA</string>

    <string name="question_6_of_10">Question 6 of 10</string>
    <string name="question_6_text">Happiness and weather are linked. What temperature (°F) does happiness peak?</string>
    <string name="_34_f">34°F</string>
    <string name="_57_f">57°F</string>
    <string name="_64_f">64°F</string>
    <string name="_79_f">79°F</string>
    <string name="_88_f">88°F</string>

    <string name="question_7_of_10">Question 7 of 10</string>
    <string name="question_7_text">People who are exposed to ______ scents are about three times as likely to be happy.</string>
    <string name="citrus">Citrus</string>
    <string name="floral">Floral</string>
    <string name="green">Green</string>
    <string name="oceanic">Oceanic</string>
    <string name="woodsy">Woodsy</string>

    <string name="question_8_of_10">Question 8 of 10</string>
    <string name="question_8_text">These foods contain serotonin, which creates quick boosts of happiness. Check three answers that apply.</string>
    <string name="broccoli">Broccoli</string>
    <string name="milk">Milk</string>
    <string name="nuts">Nuts</string>
    <string name="pears">Pears</string>
    <string name="turkey">Turkey</string>

    <string name="question_9_of_10">Question 9 of 10</string>
    <string name="question_9_text">Aim for ___ hours of sleep each night because the amount of sleep directly influences happiness level. </string>
    <string name="_3hto4h">3 to 4</string>
    <string name="_5hto6h">5 to 6</string>
    <string name="_7hto8h">7 to 8</string>
    <string name="_9hto10h">9 to 10</string>
    <string name="_11hto12h">11 to 12</string>

    <string name="question_10_of_10">Question 10 of 10</string>
    <string name="type_color">Please type in one color</string>
    <string name="question_10_text">_____ is the top pick for healthy people who associate mood with color.</string>

    <string name="button_score">How Did You Do?</string>
    <string name="button_answer">Answers | Bibliography</string>

    <string name="answer_title">Answers</string>
    <string name="answer_q1">1) 20 minutes</string>
    <string name="answer_q2">2) Checking email more than 3x/day AND Facebook and other social media</string>
    <string name="answer_q3">3) Consumerism</string>
    <string name="answer_q4">4) Norway, followed by Denmark, Switzerland, and Finland. Canada was 7th, Australia and Sweden tied for 9th, and the United States was 14th.</string>
    <string name="answer_q5">5) Boulder, CO, followed by Santa Cruz-Watsonville, CA; Charlottesville, VA; Fort Collins, CO; and San Luis Obispo, CA.</string>
    <string name="answer_q6">6) 57°F</string>
    <string name="answer_q7">7) Floral</string>
    <string name="answer_q8">8) Milk, nuts, AND turkey</string>
    <string name="answer_q9">9) 7 to 8</string>
    <string name="answer_q10">10) Yellow</string>

    <string name="bibliography_title">Bibliography</string>
    <string name="florentine_e">Florentine, E. (2016, July 11). 11 Scientific Facts About Happiness That You\'ll Want to Know. </string>
    <string name="hettner_k">Hettner, K. (2017, March 21). Where are the World\'s Happiest Countries?</string>
    <string name="lehnardt_k">Lehnardt, K. (2017, August 22). 56 Cheerful Facts About Happiness.</string>
    <string name="nine_questions">Nine Questions for Dan Buettner: Happiest Lessons from the Happiest Countries and Cities in the World. (2017, October 11).</string>
    <string name="pappas_s">Pappas, S. (2010, February 8). Different Colors Describe Happiness or Depression.</string>
    <string name="webpage_fx">Webpage FX. (2013, December 5). The Science of Happiness: What Biology and Data Reveal About Our Mood.</string>
    <string name="where_cities">Where are the Happiest Cities in America? (2017, October 18).</string>
    <string name="yellow_happy_face">Yellow happy face</string>

</resources>
